fixing main page display on mobile

--- a/styles.css
+++ b/styles.css
@@ -134,14 +134,14 @@ body a {
     background-color: rgba(32, 33, 36, 1);
     display: flex;
     flex-direction: row;
-    gap: 60px;
+    gap: 83px;
     height: 100px;
     width: 100%;
   }
 
   .logo {
     font-size: 8px;
-    margin-left: 5px;
+    margin-left: 3px;
     
   }
 
@@ -160,9 +160,9 @@ body a {
 
   .grids{
     display: grid;
-    grid-template-columns: 200px 200px;
+    grid-template-columns: 190px 200px;
     grid-auto-rows: auto;
-    margin: 2em 0.5em;
+    margin: 2em 0.2em;
   }
 
   .title h1 {
